--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <input type="number" name="dimensions" value="4" min="2" max="10" />
       </label>
       <label>
-        Animation:&nbsp;
+        Camera Animation:&nbsp;
         <input type="checkbox" name="animation" id="animation" checked
       /></label>
       <label id="axis">
