--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="A hacky javascript software renderer for raytracing n-dimensional spheres"
     />
-    <meta property="og:image" content="./og.png" />
+    <meta
+      property="og:image"
+      content="https://nd-raytracing.netlify.app/og.png"
+    />
 
     <style>
       * {
